@@ -470,8 +470,6 @@ URL_REAR_DEBIAN10_32="$URL_REAR_BASE/Rear/Debian_10/i386/rear_2.6-0_i386.deb"
 URL_REAR_DEBIAN10_64="$URL_REAR_BASE/Rear/Debian_10/amd64/rear_2.6-0_amd64.deb"
 URL_REAR_DEBIAN11_32="$URL_REAR_BASE/Rear/Debian_11/i386/rear_2.7-0_i386.deb"
 URL_REAR_DEBIAN11_64="$URL_REAR_BASE/Rear/Debian_11/amd64/rear_2.7-0_amd64.deb"
-URL_REAR_DEBIAN11_32="$URL_REAR_BASE/Rear/Debian_11/i386/rear_2.7-0_i386.deb"
-URL_REAR_DEBIAN11_64="$URL_REAR_BASE/Rear/Debian_11/amd64/rear_2.7-0_amd64.deb"
 URL_REAR_DEBIAN12_32="$URL_REAR_BASE/Rear/Debian_11/i386/rear_2.7-0_i386.deb"
 URL_REAR_DEBIAN12_64="$URL_REAR_BASE/Rear/Debian_11/amd64/rear_2.7-0_amd64.deb"
 
@@ -523,8 +521,8 @@ REAR_DEP_DEBIAN7="binutils attr syslinux ethtool lsb-release genisoimage iproute
 REAR_DEP_DEBIAN8="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc rsync genisoimage isolinux"
 REAR_DEP_DEBIAN9="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools less rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
 REAR_DEP_DEBIAN10="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
-REAR_DEP_DEBIAN11="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
-REAR_DEP_DEBIAN12="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
+REAR_DEP_DEBIAN11="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client syslinux gdisk"
+REAR_DEP_DEBIAN12="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client syslinux gdisk"
 
 # UBUNTU Dependencies
 REAR_DEP_UBUNTU12="syslinux ethtool lsb-release genisoimage iproute iputils-ping binutils parted openssl gawk attr mingetty sudo curl nfs-common"
